center align remove-chip button - issue #2920
Remove-chip button was improperly rendered in some browsers, such as
Safari 8 and FF Developer Edition. Added inline-level alignment, which
properly centers it.

--- a/src/components/chips/chips.scss
+++ b/src/components/chips/chips.scss
@@ -89,6 +89,8 @@ $contact-chip-name-width: rem(12) !default;
       box-shadow: none;
       margin: 0;
       position: relative;
+      display: inline-block;
+      vertical-align: middle;
       md-icon {
         height: $chip-delete-icon-size;
         width: $chip-delete-icon-size;
